added paragraph to the code

--- a/index.html
+++ b/index.html
@@ -7,5 +7,6 @@
 </head>
 <body>
    <h1>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Incidunt recusandae, consequuntur eius ipsum esse minima neque hic assumenda provident, iure commodi accusantium repellat consectetur enim earum. Saepe atque ratione provident.</h1> 
+<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quasi, veniam.</p>
 </body>
 </html>
